Rules controller finished
