# swagger_server/controllers/model_reviews_controller.py
@@ -6,6 +6,8 @@ from swagger_server.models.request_info import RequestInfo  # noqa: E501
 from swagger_server.models.rule import Rule  # noqa: E501
 from swagger_server import util
 
+from swagger_server.__globals__ import _globals
+
 
 def add_model_review(model_review):  # noqa: E501
     """Add a Model Review
@@ -18,8 +20,12 @@ def add_model_review(model_review):  # noqa: E501
     :rtype: None
     """
     if connexion.request.is_json:
-        model_review = ModelReview.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+        values = list(model_review.values())
+        results = _globals.orm.insert('ModelReviews', values)
+        if type(results) != list:
+            results = str(results)
+
+        return results
 
 
 def delete_model_review(sentenceID):  # noqa: E501
@@ -32,7 +38,10 @@ def delete_model_review(sentenceID):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    return _globals.orm.delete(
+        'ModelReviews', 
+        f'WHERE sentenceID={sentenceID}'
+    )
 
 
 def get_model_review_by_id(sentenceID):  # noqa: E501
@@ -45,7 +54,10 @@ def get_model_review_by_id(sentenceID):  # noqa: E501
 
     :rtype: List[ModelReview]
     """
-    return 'do some magic!'
+    return _globals.orm.get(
+        'ModelReviews', 
+        f'WHERE sentenceID={sentenceID}'
+    ) 
 
 
 def get_model_reviews():  # noqa: E501
@@ -56,7 +68,8 @@ def get_model_reviews():  # noqa: E501
 
     :rtype: List[ModelReview]
     """
-    return 'do some magic!'
+
+    return _globals.orm.get('ModelReviews')
 
 
 def update_model_review(sentenceID, Model_Review):  # noqa: E501
@@ -73,4 +86,8 @@ def update_model_review(sentenceID, Model_Review):  # noqa: E501
     """
     if connexion.request.is_json:
         Model_Review = Rule.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+    
+    return _globals.orm.update(
+        'ModelReviews',
+        Model_Review
+    ) 
